# election-data

./: .gitignore  README.md  hello.py  main.py  pyproject.toml
src/vote/: __init__.py  main.py
