[project]
name = "vote"
version = "0.1.0"
description = "Grabe live data from GA SOS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.2",
    "requests>=2.32.3",
    "typer>=0.12.5",
]

[project.scripts]
getvotes = "vote:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"